Fix: Address image widget export, SVG icon rendering, and AI conversion node duplication by adding new media heuristics and pipeline logic.

--- a/src/ui.html
+++ b/src/ui.html
@@ -1423,7 +1423,7 @@
           'star-rating', 'counter', 'progress', 'tabs', 'accordion', 'toggle', 'alert', 'social-icons',
           'soundcloud', 'shortcode', 'html', 'menu-anchor', 'sidebar', 'read-more', 'image-carousel',
           'basic-gallery', 'gallery', 'icon-list', 'nav-menu', 'search-form', 'google-maps', 'testimonial',
-          'embed', 'lottie', 'loop:grid'
+          'embed', 'lottie', 'loop:grid', 'w:container', 'w:inner-container',
         ],
         'Pro': [
           'form', 'login', 'subscription', 'call-to-action', 'media:carousel', 'portfolio', 'gallery-pro',
@@ -1453,8 +1453,7 @@
         ],
         'Experimentais': [
           'w:nested-tabs', 'w:mega-menu', 'w:scroll-snap', 'w:motion-effects', 'w:background-slideshow',
-          'w:css-transform', 'w:custom-position', 'w:dynamic-tags', 'w:ajax-pagination',
-          'w:aspect-ratio-container'
+          'w:css-transform', 'w:custom-position', 'w:dynamic-tags', 'w:ajax-pagination'
         ],
         'WordPress': [
           'w:wp-search', 'w:wp-recent-posts', 'w:wp-recent-comments', 'w:wp-archives', 'w:wp-categories',
