--- a/src/ui.html
+++ b/src/ui.html
@@ -2092,184 +2092,39 @@
 
       // Linter Logic
       const linterPanel = document.getElementById('linter-panel');
-      });
-    }
+      const linterSummary = document.getElementById('linter-summary');
+      const linterIssues = document.getElementById('linter-issues');
+      const btnAnalyze = document.getElementById('btn_analyze');
+      const btnCloseLinter = document.getElementById('btn_close_linter');
 
-    // Icones SVG otimizados
-    const ICONS = {
-      text: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 7V4h16v3M9 20h6M12 4v16"/></svg>`,
-      image: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2" ry="2"/><circle cx="8.5" cy="8.5" r="1.5"/><polyline points="21 15 16 10 5 21"/></svg>`,
-      button: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="8" width="18" height="8" rx="2"/><line x1="12" y1="12" x2="12" y2="12"/></svg>`,
-      container: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M3 9h18M9 21V9"/></svg>`,
-      woo: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="9" cy="21" r="1"/><circle cx="20" cy="21" r="1"/><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"/></svg>`,
-      star: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="12 2 15.09 8.26 22 9.27 17 14.14 18.18 21.02 12 17.77 5.82 21.02 7 14.14 2 9.27 8.91 8.26 12 2"/></svg>`,
-      video: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><polygon points="23 7 16 12 23 17 23 7"/><rect x="1" y="5" width="15" height="14" rx="2" ry="2"/></svg>`,
-      menu: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="3" y1="12" x2="21" y2="12"/><line x1="3" y1="6" x2="21" y2="6"/><line x1="3" y1="18" x2="21" y2="18"/></svg>`,
-      form: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/><polyline points="14 2 14 8 20 8"/><line x1="16" y1="13" x2="8" y2="13"/><line x1="16" y1="17" x2="8" y2="17"/><polyline points="10 9 9 9 8 9"/></svg>`,
-      default: `<svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>`
-    };
-
-    function getWidgetIcon(name) {
-      if (name.includes('image') || name.includes('gallery') || name.includes('thumb')) return ICONS.image;
-      if (name.includes('text') || name.includes('heading') || name.includes('title')) return ICONS.text;
-      if (name.includes('button') || name.includes('btn') || name.includes('link')) return ICONS.button;
-      if (name.includes('container') || name.includes('section') || name.includes('div')) return ICONS.container;
-      if (name.includes('woo') || name.includes('product') || name.includes('cart')) return ICONS.woo;
-      if (name.includes('star') || name.includes('rating') || name.includes('review')) return ICONS.star;
-      if (name.includes('video') || name.includes('youtube')) return ICONS.video;
-      if (name.includes('menu') || name.includes('nav')) return ICONS.menu;
-      if (name.includes('form') || name.includes('input')) return ICONS.form;
-      return ICONS.default;
-    }
-
-    // Dados dos widgets para geracao dinamica
-    const WIDGET_DATA = {
-      'Basicos': [
-        'heading', 'text', 'button', 'image', 'icon', 'video', 'divider', 'spacer', 'image-box', 'icon-box',
-        'star-rating', 'counter', 'progress', 'tabs', 'accordion', 'toggle', 'alert', 'social-icons',
-        'soundcloud', 'shortcode', 'html', 'menu-anchor', 'sidebar', 'read-more', 'image-carousel',
-        'basic-gallery', 'gallery', 'icon-list', 'nav-menu', 'search-form', 'google-maps', 'testimonial',
-        'embed', 'lottie', 'loop:grid', 'w:container', 'w:inner-container',
-      ],
-      'Pro': [
-        'form', 'login', 'subscription', 'call-to-action', 'media:carousel', 'portfolio', 'gallery-pro',
-        'slider:slides', 'slideshow', 'flip-box', 'animated-headline', 'post-navigation', 'share-buttons',
-        'table-of-contents', 'countdown', 'blockquote', 'testimonial-carousel', 'review-box', 'reviews', 'hotspots',
-        'sitemap', 'author-box', 'price-table', 'price-list', 'progress-tracker', 'animated-text',
-        'nav-menu-pro', 'breadcrumb', 'facebook-button', 'facebook-comments', 'facebook-embed',
-        'facebook-page', 'loop:builder', 'loop:grid-advanced', 'loop-carousel', 'post-excerpt',
-        'post-content', 'post-title', 'post-info', 'post-featured-image', 'post-author', 'post-date',
-        'post-terms', 'archive-title', 'archive-description', 'site-logo', 'site-title', 'site-tagline',
-        'search-results', 'global-widget', 'video-playlist', 'video-gallery'
-      ],
-      'WooCommerce': [
-        'woo:product-title', 'woo:product-image', 'woo:product-price', 'woo:product-add-to-cart',
-        'woo:product-data-tabs', 'woo:product-excerpt', 'woo:product-rating', 'woo:product-stock',
-        'woo:product-meta', 'woo:product-additional-information', 'woo:product-short-description',
-        'woo:product-related', 'woo:product-upsells', 'woo:product-tabs', 'woo:product-breadcrumb',
-        'woo:product-gallery', 'woo:products', 'woo:product-grid', 'woo:product-carousel',
-        'woo:product-loop-item', 'woo:loop-product-title', 'woo:loop-product-price',
-        'woo:loop-product-rating', 'woo:loop-product-image', 'woo:loop-product-button',
-        'woo:loop-product-meta', 'woo:cart', 'woo:checkout', 'woo:my-account', 'woo:purchase-summary',
-        'woo:order-tracking'
-      ],
-      'Loop Builder': [
-        'loop:item', 'loop:image', 'loop:title', 'loop:meta', 'loop:terms', 'loop:rating', 'loop:price',
-        'loop:add-to-cart', 'loop:read-more', 'loop:featured-image', 'loop:pagination'
-      ],
-      'Experimentais': [
-        'w:nested-tabs', 'w:mega-menu', 'w:scroll-snap', 'w:motion-effects', 'w:background-slideshow',
-        'w:css-transform', 'w:custom-position', 'w:dynamic-tags', 'w:ajax-pagination'
-      ],
-      'WordPress': [
-        'w:wp-search', 'w:wp-recent-posts', 'w:wp-recent-comments', 'w:wp-archives', 'w:wp-categories',
-        'w:wp-calendar', 'w:wp-tag-cloud', 'w:wp-custom-menu'
-      ]
-    };
-
-    function renderWidgetList(filterText = '') {
-      const container = document.getElementById('widget-list-container');
-      if (!container) return;
-
-      const search = filterText.toLowerCase().trim();
-      let html = '';
-
-      if (search) {
-        html += `<div class="search-status">Filtrando por: "<strong>${search}</strong>"</div>`;
+      if (btnAnalyze) {
+        btnAnalyze.onclick = () => {
+          send('analyze-layout');
+          addLog('Iniciando análise de layout...', 'info');
+        };
       }
 
-      let hasResults = false;
-
-      for (const [category, items] of Object.entries(WIDGET_DATA)) {
-        const filteredItems = items.filter(item => {
-          if (!search) return true;
-          return item.toLowerCase().includes(search);
-        });
-
-        if (filteredItems.length === 0) continue;
-        hasResults = true;
-
-        html += `<div class="card compact"><div class="card-title small">${category}</div><div class="help-grid compact">`;
-
-        filteredItems.forEach(item => {
-          let fullName = item;
-          if (!item.includes(':') && !item.startsWith('w:')) {
-            fullName = 'w:' + item;
-          }
-          const icon = getWidgetIcon(fullName);
-
-          html += `
-              <div class="help-item compact" title="${fullName}">
-                <div class="item-header">
-                  <span class="item-icon">${icon}</span>
-                  <span class="label">${fullName}</span>
-                </div>
-                <button class="btn tiny ghost full-width" data-rename="${fullName}">Aplicar</button>
-              </div>`;
-        });
-
-        html += `</div></div>`;
+      if (btnCloseLinter) {
+        btnCloseLinter.onclick = () => {
+          if (linterPanel) linterPanel.style.display = 'none';
+        };
       }
 
-      if (!hasResults) {
-        html = `<div class="empty-state">Nenhum widget encontrado para "${search}"</div>`;
-      }
+      function renderLinterReport(report) {
+        if (!linterPanel || !linterSummary || !linterIssues) return;
 
-      container.innerHTML = html;
-    }
+        linterPanel.style.display = 'block';
+        linterIssues.innerHTML = '';
+        linterSummary.innerHTML = '';
 
-    renderWidgetList();
+        if (!report) {
+          linterSummary.innerHTML = '<div class="linter-empty">Erro ao gerar relatório.</div>';
+          return;
+        }
 
-    const searchInput = document.getElementById('widget-search');
-    if (searchInput) {
-      searchInput.addEventListener('input', (e) => {
-        renderWidgetList(e.target.value);
-      });
-    }
-
-    document.body.addEventListener('click', (e) => {
-      const btn = e.target.closest('[data-rename]');
-      if (btn) {
-        const name = btn.getAttribute('data-rename');
-        send('rename-layer', { name });
-      }
-    });
-
-    // Linter Logic
-    const linterPanel = document.getElementById('linter-panel');
-    const linterSummary = document.getElementById('linter-summary');
-    const linterIssues = document.getElementById('linter-issues');
-    const btnAnalyze = document.getElementById('btn_analyze');
-    const btnCloseLinter = document.getElementById('btn_close_linter');
-
-    if (btnAnalyze) {
-      btnAnalyze.onclick = () => {
-        send('analyze-layout');
-        addLog('Iniciando análise de layout...', 'info');
-      };
-    }
-
-    if (btnCloseLinter) {
-      btnCloseLinter.onclick = () => {
-        if (linterPanel) linterPanel.style.display = 'none';
-      };
-    }
-
-    function renderLinterReport(report) {
-      if (!linterPanel || !linterSummary || !linterIssues) return;
-
-      linterPanel.style.display = 'block';
-      linterIssues.innerHTML = '';
-      linterSummary.innerHTML = '';
-
-      if (!report) {
-        linterSummary.innerHTML = '<div class="linter-empty">Erro ao gerar relatório.</div>';
-        return;
-      }
-
-      // Render Summary
-      const scoreColor = report.score >= 90 ? 'success' : report.score >= 70 ? 'warning' : 'error';
-      linterSummary.innerHTML = `
+        // Render Summary
+        const scoreColor = report.score >= 90 ? 'success' : report.score >= 70 ? 'warning' : 'error';
+        linterSummary.innerHTML = `
           <div class="linter-score ${scoreColor}">
             <div class="score-value">${report.score}</div>
             <div class="score-label">Score</div>
@@ -2286,14 +2141,14 @@
           </div>
         `;
 
-      // Render Issues
-      if (report.issues.length === 0) {
-        linterIssues.innerHTML = '<div class="linter-empty">Nenhum problema encontrado! 🎉</div>';
-      } else {
-        report.issues.forEach(issue => {
-          const issueEl = document.createElement('div');
-          issueEl.className = `linter-issue ${issue.severity}`;
-          issueEl.innerHTML = `
+        // Render Issues
+        if (report.issues.length === 0) {
+          linterIssues.innerHTML = '<div class="linter-empty">Nenhum problema encontrado! 🎉</div>';
+        } else {
+          report.issues.forEach(issue => {
+            const issueEl = document.createElement('div');
+            issueEl.className = `linter-issue ${issue.severity}`;
+            issueEl.innerHTML = `
               <div class="issue-header">
                 <span class="issue-severity ${issue.severity}">${issue.severity === 'error' ? 'Erro' : 'Alerta'}</span>
                 <span class="issue-message">${issue.message}</span>
@@ -2305,54 +2160,107 @@
               </div>
             `;
 
-          // Add click handler for selection
-          issueEl.addEventListener('click', (e) => {
-            if (e.target.tagName !== 'BUTTON') {
-              send('select-node', { nodeId: issue.nodeId });
-            }
-          });
-
-          // Add fix handler
-          const fixBtn = issueEl.querySelector('[data-fix]');
-          if (fixBtn) {
-            fixBtn.addEventListener('click', (e) => {
-              e.stopPropagation();
-              send('fix-issue', { ruleId: issue.ruleId, nodeId: issue.nodeId });
+            // Add click handler for selection
+            issueEl.addEventListener('click', (e) => {
+              if (e.target.tagName !== 'BUTTON') {
+                send('select-node', { nodeId: issue.nodeId });
+              }
             });
-          }
 
-          linterIssues.appendChild(issueEl);
-        });
+            // Add fix handler
+            const fixBtn = issueEl.querySelector('[data-fix]');
+            if (fixBtn) {
+              fixBtn.addEventListener('click', (e) => {
+                e.stopPropagation();
+                send('fix-issue', { ruleId: issue.ruleId, nodeId: issue.nodeId });
+              });
+            }
+
+            linterIssues.appendChild(issueEl);
+          });
+        }
       }
-      // 3. Renderizar Tabela de Widgets
-      const widgetsBody = document.getElementById('widgets-table-body');
-      const widgetsCount = document.getElementById('widgets-count');
+      // Renderiza o relatório do Linter na UI
+      function renderLinterReport(report) {
+        if (!report) return;
+        // 1. Atualizar Score e Stats
+        const totalIssues = report.summary.total || 0;
+        document.getElementById('linter-total-issues').textContent = totalIssues;
 
-      widgetsBody.innerHTML = ''; // Limpar tabela
-      widgetsCount.textContent = report.widgets ? report.widgets.length : 0;
-      if (report.widgets && report.widgets.length > 0) {
-        // Mostrar apenas os top 20 para não travar a UI se houver muitos
-        report.widgets.slice(0, 20).forEach(widget => {
-          const row = document.createElement('tr');
-          row.innerHTML = `
+        // Atualizar cor do anel baseada no score (opcional, por enquanto fixo)
+        // document.getElementById('linter-score-ring').style.borderColor = ...
+        const counts = report.summary.by_severity || {};
+        document.getElementById('count-critical').textContent = counts.critical || 0;
+        document.getElementById('count-major').textContent = counts.major || 0;
+        document.getElementById('count-minor').textContent = counts.minor || 0;
+        // 2. Renderizar Lista de Issues
+        const issuesList = document.getElementById('linter-issues-list');
+        issuesList.innerHTML = ''; // Limpar lista atual
+        if (totalIssues === 0) {
+          issuesList.innerHTML = `
+            <div class="linter-empty-state">
+              <div class="empty-icon">✨</div>
+              <h3>Nenhum problema encontrado</h3>
+              <p>Seu layout parece estar seguindo todas as boas práticas!</p>
+            </div>`;
+        } else {
+          report.analysis.forEach(issue => {
+            const card = document.createElement('div');
+            card.className = 'linter-issue-card';
+
+            // Ícone baseado na regra
+            let icon = '⚠️';
+            if (issue.ruleId === 'auto-layout-required') icon = '📐';
+            if (issue.ruleId === 'widget-naming') icon = '🏷️';
+            if (issue.ruleId === 'spacer-detected') icon = '📏';
+            card.innerHTML = `
+              <div class="issue-header">
+                <div class="issue-title">
+                  <span>${icon}</span>
+                  <span>${issue.nodeName || 'Node'}</span>
+                </div>
+                <span class="issue-badge ${issue.severity}">${issue.severity}</span>
+              </div>
+              <div class="issue-desc">${issue.message}</div>
+              <div class="issue-actions">
+                <button class="btn tiny secondary" onclick="send('focus-node', { nodeId: '${issue.nodeId}' })">
+                  📍 Ver no Figma
+                </button>
+              </div>
+            `;
+            issuesList.appendChild(card);
+          });
+        }
+        // 3. Renderizar Tabela de Widgets
+        const widgetsBody = document.getElementById('widgets-table-body');
+        const widgetsCount = document.getElementById('widgets-count');
+
+        widgetsBody.innerHTML = ''; // Limpar tabela
+        widgetsCount.textContent = report.widgets ? report.widgets.length : 0;
+        if (report.widgets && report.widgets.length > 0) {
+          // Mostrar apenas os top 20 para não travar a UI se houver muitos
+          report.widgets.slice(0, 20).forEach(widget => {
+            const row = document.createElement('tr');
+            row.innerHTML = `
               <td><strong>${widget.widget}</strong></td>
               <td>${widget.nodeName}</td>
               <td>${widget.confidence}</td>
             `;
-          widgetsBody.appendChild(row);
-        });
+            widgetsBody.appendChild(row);
+          });
 
-        if (report.widgets.length > 20) {
+          if (report.widgets.length > 20) {
+            const row = document.createElement('tr');
+            row.innerHTML = `<td colspan="3" style="text-align:center; color:#888;">... e mais ${report.widgets.length - 20} widgets</td>`;
+            widgetsBody.appendChild(row);
+          }
+        } else {
           const row = document.createElement('tr');
-          row.innerHTML = `<td colspan="3" style="text-align:center; color:#888;">... e mais ${report.widgets.length - 20} widgets</td>`;
+          row.innerHTML = `<td colspan="3" style="text-align:center; padding: 12px;">Nenhum widget detectado</td>`;
           widgetsBody.appendChild(row);
         }
-      } else {
-        const row = document.createElement('tr');
-        row.innerHTML = `<td colspan="3" style="text-align:center; padding: 12px;">Nenhum widget detectado</td>`;
-        widgetsBody.appendChild(row);
       }
-    }
+    })();
   </script>
 </body>
 
